# smart-parking-backend-core

./: .dockerignore  .gitignore  Dockerfile  HUONG_DAN_CHAY.md  main.py  pyproject.toml  requirements.txt
src/app/: main.py
src/app/api/: invoices.py  lpr.py  parking_slots.py  recognize.py  sensors.py
src/app/core/: auth_middleware.py  config.py  database.py
src/app/models/: __init__.py  parking_session.py
src/app/schemas/: schemas.py
src/app/service/: parking_service.py
src/app/services/: invoices_services.py  lpr_service.py  parking_slots_services.py  session_store.py  storage_service.py
src/app/utils/: camera.py  http_client.py  logger.py  mqtt_client.py  plate_dict.txt  supabase.py
