[project]
name = "smart-parking-backend-core-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.31.0",
    "databases==0.9.0",
    "fastapi==0.135.1",
    "numpy==1.26.4",
    "opencv-python==4.6.0.66",
    "paddleocr==2.7.3",
    "paddlepaddle==2.6.2",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "setuptools>=82.0.1",
    "sqlalchemy==2.0.38",
    "uvicorn==0.41.0",
]
